--- a/R7/package.json
+++ b/R7/package.json
@@ -22,10 +22,9 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^13.0.0",
-    "zod": "^4.1.12"
-  },
-  "devDependencies": {
+    "zod": "^4.1.12",
     "@prisma/client": "^6.19.0",
     "prisma": "^6.19.0"
-  }
+  },
+  "devDependencies": {}
 }
